Florian git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6527 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -76,6 +76,7 @@ Mitte/Ende Juni: Outline der Diplomarbeit
   Qualitative Constraint-Kalküle (siehe Thomas)
   CASL (siehe Paper   T. Mossakowski: Relating CASL with Other Specification Languages:
         the Institution Level Theoretical Computer Science 286, p. 367-475, 2002.)
+     CASL-Formeln nur ganz kurz
   ConstraintCASL
     Signaturen, Signaturmorphismen (aus CASL)
     Modelle (aus CASL)
