changed size of AND to that of view for symmetry with THEN git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6537 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/utils/hetcasl.sty
+++ b/utils/hetcasl.sty
@@ -114,7 +114,7 @@
 \newcommand{\THENDEF}           {\THEN~\ANNOTEWORD{def}\xspace}
 \newcommand{\THENIMPLIES}       {\THEN~\ANNOTEWORD{implies}\xspace}
 \newcommand{\THENMONO}          {\THEN~\ANNOTEWORD{mono}\xspace}
-\newcommand{\AND}               {\KW{and}\xspace}
+\newcommand{\AND}               {\KW[view]{and}\xspace}
 \newcommand{\LOCAL}             {\KW{local}\xspace}
 \newcommand{\THENLOCAL}         {\THEN~\LOCAL}
 \newcommand{\WITHIN}            {\KW{within}\xspace}
