made VAR a signature keyword git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6565 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/utils/hetcasl.sty
+++ b/utils/hetcasl.sty
@@ -102,7 +102,8 @@
 \newcommand{\GENERATEDTYPE}     {\GENERATED~\TYPE\xspace} %{\KW{generated~type}}
 \newcommand{\GENERATEDTYPES}    {\GENERATED~\TYPES\xspace}
 
-\newcommand{\VARS}              {\KW{vars}\xspace}
+\newcommand{\VAR}               {\KW[preds]{var}\xspace}
+\newcommand{\VARS}              {\KW[preds]{vars}\xspace}
 \newcommand{\AXIOM}             {\KW{axiom}\xspace}
 \newcommand{\AXIOMS}            {\KW{axioms}\xspace}
 
@@ -165,7 +166,6 @@
 \newcommand{\WHEN}              {\Id{when}\xspace}
 \newcommand{\ELSE}              {\Id{else}\xspace}
 \newcommand{\DEF}               {\Id{def}\xspace}
-\newcommand{\VAR}               {\Id{var}\xspace}
 \newcommand{\AS}                {\Id{as}\xspace}
 \newcommand{\TRUE}              {\Id{true}\xspace}
 \newcommand{\FALSE}             {\Id{false}\xspace}
