added comments and todo git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6701 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -431,7 +431,9 @@ use either XPath or Haifas xmlify stuff for
 
 SPASS/Logic_SPASS
   change proof_tree to String and save TSTP to it
-  SPASS Proof must be parsed and translated to TSTP 
+  SPASS proof between "^Here is a proof" and "^Formulae used"
+  later
+    SPASS Proof must be parsed and translated to TSTP 
     (Klaus checks for this functionallity in MathServ)
 
 SPASS/MathServCommunications
