added HetsLabel git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6736 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/utils/hetcasl.sty
+++ b/utils/hetcasl.sty
@@ -78,6 +78,8 @@
 \@neededWidth]%
 [l]{\textbf{##2}}%
 }%
+% print the label as is
+\newcommand{\HetsLabel}[1]{{\small{}##1}}
 % \SId prints its argument in small caps as a Structured Id for names
 % of specifications, views and libraries
 \newcommand{\SId}[1]{\textsc{##1}}%
