added labels for identifier git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6745 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/utils/hetcasl.sty
+++ b/utils/hetcasl.sty
@@ -79,7 +79,10 @@
 [l]{\textbf{##2}}%
 }%
 % print the label as is
-\newcommand{\HetsLabel}[1]{{\small{}##1}}
+\newcommand{\HetsLabel}[1]{{\small##1}}
+% print label for ids
+\newcommand{\IdDeclLabel}[2]{##1}
+\newcommand{\IdApplLabel}[2]{##1}
 % \SId prints its argument in small caps as a Structured Id for names
 % of specifications, views and libraries
 \newcommand{\SId}[1]{\textsc{##1}}%
