--- a/utils/hetcasl.sty
+++ b/utils/hetcasl.sty
@@ -78,11 +78,11 @@
 \@neededWidth]%
 [l]{\textbf{##2}}%
 }%
-% print the label as is
-\newcommand{\HetsLabel}[1]{{\small##1}}
+% print the first argument as is and use the second argument as label
+\newcommand{\HetsLabel}[2]{##1}
 % print label for ids
-\newcommand{\IdDeclLabel}[2]{##1}
-\newcommand{\IdApplLabel}[2]{##1}
+\newcommand{\IdDeclLabel}[2]{##1} %% {##1\label{##2}}
+\newcommand{\IdApplLabel}[2]{##1} %% {##1\ref{##2}}
 % \SId prints its argument in small caps as a Structured Id for names
 % of specifications, views and libraries
 \newcommand{\SId}[1]{\textsc{##1}}%
