--- a/todo
+++ b/todo
@@ -453,14 +453,22 @@ Name of the real prover should be in the prover_name of Proof_status
   if the Broker was used but "<name> [via MathServBroker]" should be 
   the end of the prover name
 
+SPASS encoding improvements in SPASS.Conversions/Comorphisms.CASL2SPASS
+  - if there is only one sort in the signature eliminate it
+    special case: (freely) generated sorts are not eliminated
+      new flag in SPASS sign: singleSorted
+      Sentences are modified in CASL2SPASS
+      all variable declarations have to consider the flag 
+         (quantified formulas) variable lists without types
+       Formula/Term specific 
+       - F:sort membership ==> true
+       - T:explicit cast is omitted
+       - T:explicit typing of terms is omitted
+    typings in the signature have to be removed in SPASS.Conversions
+      empty declarations list
+
 SPASS encoding improvements in CASL2SPASS
-  if there is only one sort in the signature eliminate it
-    involves SPASS.Utils
-    add a boolean flag to CSort to recognize omitted sorts during
-     the sentence translation
-    typings in the signature have to be removed
-    all variable declarations have to consider the flag (quantified formulas)
-  if there are predicates defined upon equality substitute them with equality
+  - if there are predicates defined upon equality substitute them with equality
     and remove them from the signature
     find definitions (Equivalences) where one side is a binary predicate 
       and the other side is a builtin equality application (Strong_equation)
