added Razvan and Anton git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6897 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/UserGuide.tex
+++ b/doc/UserGuide.tex
@@ -1144,12 +1144,14 @@ Jorina Freya Gerken,
 Sonja Gr\"{o}ning,
 Wiebke Herding,
 Heng Jiang,
+Anton Kirilov,
 Tina Krausser,
 Martin K\"{u}hl,
 Mingyi Liu,
 Klaus L\"{u}ttich,
 Christian Maeder,
 Maciek Makowski,
+Razvan Pascanu,
 Daniel Pratsch,
 Felix Reckers,
 Markus Roggenbach, 
