tech report about translation Haskell to Isabelle last version - source git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6917 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/hs2isa.tex
+++ b/doc/hs2isa.tex
@@ -37,11 +37,13 @@
 
 \maketitle
 
-\abstract{\small We present a tool for the translation of Haskell
-  programs to Isabelle HOLCF and Isabelle HOL based on a shallow
-  embdedding approach, implemented as part of the Hets system, on top
-  of the static analysis
-  carried out by Programatica. The translation of monads uses the AWE extension of Isabelle.}\\
+\abstract{\small We present a tool for the translation of simple
+  Haskell programs to Isabelle HOLCF and, under strong semantical
+  restrictions, to Isabelle HOL, based on a shallow embdedding
+  approach, implemented as part of the Hets system, on top of the
+  static analysis
+  carried out by Programatica.}\\
+% The translation of monads uses the AWE extension of Isabelle.}\\
 
 
 \noindent It has been suggested that, owing to their relative
